2022-10-22  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Use AC_PROG_CC with autoconf 2.70, or AC_PROG_CC_C99
	for earlier versions. Use AC_PROG_LEX([noyywrap]).

2022-09-13  Aleksei Vetrov  <vvvvvv@google.com>

	* NEWS (libdwfl): Add dwfl_report_offline_memory.

2022-09-27  Taketo Kabe  <kabe@sra-tohoku.co.jp>

	* debuginfod/debuginfod-client.c: Correctly get timestamp when
	compiling with -D_TIME_BITS=64 on 32bit environment.

2022-04-28  Di Chen  <dichen@redhat.com>

	* NEWS: Add readefl -D, --use-dynamic.

2022-07-28  Di Chen  <dichen@redhat.com>

	* NEWS: Add dwfl_frame_reg.

2022-07-13  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add dwfl_get_debuginfod_client.

2022-06-02  Mark Wielaard  <mark@klomp.org>

	* configure.ac (OLD_LIBMICROHTTPD): New AM_CONDITIONAL based on
	libmicrohttpd < 0.9.51.

2022-05-02  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (AM_DISTCHECK_CONFIGURE_FLAGS): Remove
	--enable-valgrind --enable-sanitize-undefined.

2022-04-25  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_INIT): Set version to 0.187.
	* NEWS: Add some more 0.187 items.

2022-04-24  Frank Ch. Eigler  <fche@redhat.com>

	* AUTHORS.sh, .mailmap: New files.
	* AUTHORS: Regenerated to cover entire history of elfutils.

2022-04-24  Mark Wielaard  <mark@klomp.org>

	* configure.ac (AC_CHECK_FUNCS): Add mremap.

2021-03-20  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Remove -m64 on 32bit target comments for
	utrace_BIARCH check.

2021-03-14  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Use AS_HELP_STRING instead of AC_HELP_STRING.

2021-03-11  Mark Wielaard  <mark@klomp.org>

	* NEWS: Document new --relative option for addr2line.

2022-03-10  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Move AC_PROG_CXX earlier. Check for both
	-D_FORTIFY_SOURCE=3 and -D_FORTIFY_SOURCE=2 support. Also
	set CXXFLAGS. Output final CFLAGS and CXXFLAGS setting.

2021-12-04  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Add --enable-sanitize-address.
